# flagsmith-openfeature-provider-python

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: conventional-commit.yml  publish.yml  pytest.yml  release-please.yml
openfeature_flagsmith/: exceptions.py  provider.py
tests/: test_provider.py
