[tool.poetry]
name = "openfeature-provider-flagsmith"
version = "0.1.0"
description = "Openfeature provider for Flagsmith"
authors = ["Matthew Elwell <matthew.elwell@flagsmith.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flagsmith = "^3.5.0"
openfeature-sdk = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.2.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
